# example-python-1

./: README.md  pyproject.toml
.github/workflows/: ci.yml  github-hosted-ci-with-python.yml  self-hosted-ci-with-python.yml
justatest/: __init__.py
tests/: test_justatest.py
