[tool.poetry]
name = "justatest"
version = "0.1.0"
description = ""
authors = ["Stefan Verhoeven <stefan.verhoeven@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.10.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
